add statistic window