@@ -7,6 +7,9 @@ import com.javarush.island.chesnokov.organizm.plants.Plant;
 import java.util.List;
 
 public abstract class Herbivore extends Animal {
+
+    private static final double PLANT_WEIGHT = 1.0;
+
     protected Herbivore(double weight, int maxCountOnCell, int speed, double foodAmount) {
         super(weight, maxCountOnCell, speed, foodAmount);
     }
@@ -15,18 +18,15 @@ public abstract class Herbivore extends Animal {
     public void eat(Location location) {
         if (!this.isAlive()) return;
 
+        this.loseSatiety();
+        if (this.isFull()) return;
+
         List<Plant> plants = location.getPlants();
         synchronized (plants) {
             if (!plants.isEmpty()) {
-                plants.remove(0); // съели растение
-                this.eatSuccessful(); // восстановили насыщение
-                System.out.println(this.getClass().getSimpleName() + " съел растение в [" +
-                        location.getRow() + "," + location.getCol() + "]");
-                return;
+                Plant plant = plants.removeFirst();
+                this.increaseSatiety(plant.getWeight());
             }
         }
-
-        // если растения не нашёл
-        this.loseSatiety();
     }
 }
